--- a/src/components/Loading/index.module.less
+++ b/src/components/Loading/index.module.less
@@ -1,47 +1,30 @@
-// body {
-//     margin: 0 auto;
-//     padding: 20px;
-//     max-width: 1200px;
-//     overflow-y: scroll;
-//     font-family: "Open Sans", sans-serif;
-//     font-weight: 400;
-//     color: #777;
-//     background-color: #f7f7f7;
-//     -webkit-font-smoothing: antialiased;
-//     -webkit-text-size-adjust: 100%;
-//     -ms-text-size-adjust: 100%;
-// }
-
 //https://codepen.io/Manoz/pen/kyWvQw 
 
 .load {
     height: 100%;
 
     .load-wrapp {
-        float: left;
-        width: 100px;
-        height: 100px;
-        margin: 0 10px 10px 0;
+        height: 100%;
         padding: 20px 20px 20px;
         border-radius: 5px;
         text-align: center;
         background-color: #d8d8d8;
-    }
-
-    .load-wrapp p {
-        padding: 0 0 20px;
-    }
-
-    .load-wrapp:last-child {
-        margin-right: 0;
+        position: relative;
     }
 
     .line {
         display: inline-block;
-        width: 15px;
-        height: 15px;
-        border-radius: 15px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50px;
         background-color: #4b9cdb;
+    }
+
+    .load-1 {
+        width: 100%;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
     }
 
     .load-1 .line:nth-last-child(1) {
@@ -58,15 +41,15 @@
 
     @keyframes loadingA {
         0% {
-            height: 15px;
+            height: 50px;
         }
 
         50% {
-            height: 35px;
+            height: 150px;
         }
 
         100% {
-            height: 15px;
+            height: 50px;
         }
     }
 }
