--- a/src/components/Header/index.module.less
+++ b/src/components/Header/index.module.less
@@ -1,9 +1,27 @@
 .header {
     height: 150px;
     background: #7a7374;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     color: #fff;
-    line-height: 150px;
+    // line-height: 150px;
     padding: 0 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.avatar {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    cursor: pointer;
+
+    div {
+        width: 50px;
+        height: 50px;
+        background-color: pink;
+        border-radius: 50%;
+        margin-right: 5px;
+    }
 }
