--- a/src/components/Header/index.module.less
+++ b/src/components/Header/index.module.less
@@ -25,3 +25,13 @@
         margin-right: 5px;
     }
 }
+
+.appname {
+    img {
+        width: 100px;
+        height: 100px;
+    }
+    span {
+        margin-left: 20px;
+    }
+}
