--- a/src/components/LeftMenu/index.module.less
+++ b/src/components/LeftMenu/index.module.less
@@ -1,11 +1,10 @@
 .menu {
-    background: #475164;
-    width: 200px;
-}
-.a-menu {
-    background: none;
-}
+    background: #34495e;
+    width: 300px;
 
-.ant-menu.ant-menu-dark {
-    background: none;
+    :global {
+        .ant-menu.ant-menu-dark {
+            background: none;
+        }
+    }
 }
