--- a/src/components/Header/index.module.less
+++ b/src/components/Header/index.module.less
@@ -1,10 +1,9 @@
 .header {
     height: 150px;
-    background: #7a7374;
+    background: #2c3e50;
     font-size: 30px;
     font-weight: bold;
     color: #fff;
-    // line-height: 150px;
     padding: 0 50px;
     display: flex;
     align-items: center;
@@ -20,7 +19,7 @@
     div {
         width: 50px;
         height: 50px;
-        background-color: pink;
+        background-color: #1abc9c;
         border-radius: 50%;
         margin-right: 5px;
     }
@@ -31,6 +30,7 @@
         width: 100px;
         height: 100px;
     }
+
     span {
         margin-left: 20px;
     }
