--- a/src/components/Loading/index.module.less
+++ b/src/components/Loading/index.module.less
@@ -2,54 +2,7 @@
 
 .load {
     height: 100%;
-
-    .load-wrapp {
-        height: 100%;
-        padding: 20px 20px 20px;
-        border-radius: 5px;
-        text-align: center;
-        background-color: #d8d8d8;
-        position: relative;
-    }
-
-    .line {
-        display: inline-block;
-        width: 50px;
-        height: 50px;
-        border-radius: 50px;
-        background-color: #4b9cdb;
-    }
-
-    .load-1 {
-        width: 100%;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    .load-1 .line:nth-last-child(1) {
-        animation: loadingA 1.5s 1s infinite;
-    }
-
-    .load-1 .line:nth-last-child(2) {
-        animation: loadingA 1.5s 0.5s infinite;
-    }
-
-    .load-1 .line:nth-last-child(3) {
-        animation: loadingA 1.5s 0s infinite;
-    }
-
-    @keyframes loadingA {
-        0% {
-            height: 50px;
-        }
-
-        50% {
-            height: 150px;
-        }
-
-        100% {
-            height: 50px;
-        }
-    }
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
