--- a/src/pages/Charts/index.module.less
+++ b/src/pages/Charts/index.module.less
@@ -1,5 +1,7 @@
 .chart {
+    width: 100%;
     display: flex;
-    align-items: center;
+    // align-items: center;
+    padding-top: 50px;
     justify-content: space-around;
 }
