--- a/src/pages/Charts/index.module.less
+++ b/src/pages/Charts/index.module.less
@@ -2,6 +2,6 @@
     width: 100%;
     display: flex;
     // align-items: center;
-    padding-top: 50px;
+    padding: 50px;
     justify-content: space-around;
 }
