--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -9,4 +9,14 @@ body,
 .App {
   height: 100%;
   overflow: hidden;
+
+  .ant-breadcrumb {
+    margin-bottom: 20px;
+  }
+
+  .ant-pagination {
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
