--- a/src/components/LeftMenu/index.module.less
+++ b/src/components/LeftMenu/index.module.less
@@ -5,6 +5,14 @@
     :global {
         .ant-menu.ant-menu-dark {
             background: none;
+
+            .ant-menu-item {
+                height: 80px;
+                padding-left: 40px;
+                display: flex;
+                align-items: center;
+                font-size: 22px;
+            }
         }
     }
 }
