--- a/src/pages/Goods/index.module.less
+++ b/src/pages/Goods/index.module.less
@@ -13,6 +13,12 @@
     }
 }
 
+// :global {
+//     .ant-breadcrumb {
+//         margin-bottom: 20px;
+//     }
+// }
+
 .step {
     display: flex;
     align-items: center;
