--- a/src/pages/News/index.module.less
+++ b/src/pages/News/index.module.less
@@ -1,4 +1,16 @@
 .news {
     width: 100%;
     padding: 50px;
+
+    // :global {
+    //     .ant-table-container {
+    //         min-height: 555px;
+    //     }
+    // }
+}
+
+.news-action {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
